# Soundboard

./: README.md  pyproject.toml
Soundboard/: pyproject.toml
Soundboard/src/soundboard/: main.py
src/soundboard/: app.py  config.py  main.py  sound_devices.py
src/soundboard/audio/: engine.py  sound_devices.py
src/soundboard/config/: settings.py
src/soundboard/ui/: device_dropdown.py  settings_window.py
