[project]
name = "soundboard"
version = "0.1.0"
description = ""
authors = [
    {name = "NateScott28",email = "nrscott255@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pyaudio (>=0.2.14,<0.3.0)"
]

[tool.poetry]
packages = [{include = "soundboard", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
